data_exports: Fix the heading cutoff in Settings.
Removed the unnecessary margin from the admin_exports_table
class.

Fixes #20311

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1846,7 +1846,8 @@ input[type="checkbox"] {
 }
 
 .admin_exports_table {
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 @media (width < $lg_min) {
